Prevent creation of overlapping time slots

--- a/CMPT395/static/css/admin_tools.css
+++ b/CMPT395/static/css/admin_tools.css
@@ -28,3 +28,8 @@ form {
     color: red;
     cursor: pointer;
 }
+
+.error-message {
+    color: red;
+    font-weight: bold;
+}
